--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
   </main>
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io/challenges/testimonials-grid-section-Nnw6J7Un7" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://twitter.com/luieitalian">Luieitalian</a>.
   </div>
 </body>
 
