--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="left-top-side">
         <section class="card-0">
           <div class="heading">
-            <img src="images/image-daniel.jpg">
+            <img src="images/image-daniel.jpg" alt="daniel clifford">
             <div class="name-title-div">
               <div class="name">Daniel Clifford</div>
               <div class="title">Verified Graduate</div>
@@ -50,7 +50,7 @@
         </section>
         <section class="card-1">
           <div class="heading">
-            <img src="images/image-jonathan.jpg">
+            <img src="images/image-jonathan.jpg" alt="jonathan walters">
             <div class="name-title-div">
               <div class="name">Jonathan Walters</div>
               <div class="title">Verified Graduate</div>
@@ -65,7 +65,7 @@
       <div class="left-bottom-side">
         <section class="card-0">
           <div class="heading">
-            <img src="images/image-jeanette.jpg">
+            <img src="images/image-jeanette.jpg" alt="jeanette harmon">
             <div class="name-title-div">
               <div class="name">Jeanette Harmon</div>
               <div class="title">Verified Graduate</div>
@@ -78,7 +78,7 @@
         </section>
         <section class="card-1">
           <div class="heading">
-            <img src="images/image-patrick.jpg">
+            <img src="images/image-patrick.jpg" alt="patrick abrams">
             <div class="name-title-div">
               <div class="name">Patrick Abrams</div>
               <div class="title">Verified Graduate</div>
@@ -98,7 +98,7 @@
     <div class="right-side">
       <section class="card-0">
         <div class="heading">
-          <img src="images/image-kira.jpg">
+          <img src="images/image-kira.jpg" alt="kira whittle">
           <div class="name-title-div">
             <div class="name">Kira Whittle</div>
             <div class="title">Verified Graduate</div>
@@ -118,7 +118,7 @@
     </div>
   </main>
 
-  <div class="attribution">
+  <div role="footer" class="attribution">
     Challenge by <a href="https://www.frontendmentor.io/challenges/testimonials-grid-section-Nnw6J7Un7" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://twitter.com/luieitalian">Luieitalian</a>.
   </div>
